--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
+<!doctype html>
+<html class="no-js" lang="en" dir="ltr">
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Qingdi's page</title>
-<body>
-
-
-<h1>Qingdi's homepage</h1>
-</body>
+<link rel="stylesheet" href="css/foundation.css">
+<link rel="stylesheet" href="css/app.css">
 </head>
+<body>
+<section class="row">
+  <h1>Qingdi's homepage</h1>
+
+</section>
+
+<section class="row">
+  <article class="column small-12 medium-6 large-3">
+  <h1>welcome</h1>
+  <p>
+    this is some text
+  </p>
+</article>
+
+<article class="column small-12 medium-6 large-3">
+  <h1>welcome</h1>
+  <p>
+    this is some text
+  </p>
+</article>
+
+<article class="column small-12 medium-6 large-6">
+  <h1>welcome</h1>
+  <p>
+    this is some text
+  </p>
+</article>
+
+<article class="column small-12 medium-6 large-3">
+  <h1>welcome</h1>
+  <p>
+    this is some text
+  </p>
+</article>
+</section>
+
+
+<section class="row">
+
+</section>
+
+<section class="row">
+
+</section>
 
 
 
@@ -15,4 +60,10 @@
 
 
 
+
+<script src="js/vendor/jquery.js"></script>
+<script src="js/vendor/what-input.js"></script>
+<script src="js/vendor/foundation.js"></script>
+<script src="js/app.js"></script>
+</body>
 </html>
