--- a/about.html
+++ b/about.html
@@ -4,19 +4,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Qingdi - artist - homepage</title>
+<title>Qingdi's - artist -aboutme</title>
 <link rel="stylesheet" href="css/foundation.css">
 <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+
   <div class="wrapper">
   <header class="row">
-    <h1 class="columns small-12 medium-6 large-4">Logo</h1>
+    <h1>logo</h1>
 
     <nav>
-      <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
-      <a href="pro.html" class="columns small-12 medium-2 large-1">  Portfolio</a>
-      <a href="about.html" class="columns small-12 medium-2 large-1"> About</a>
+      <a href="index.html">Home</a>
+      <a href="pro.html"> Portfolio</a>
+      <a href="about.html">About</a>
     </nav>
   </header>
 
@@ -25,7 +26,6 @@
 
   </footer>
   </div>
-
 
 
 
