--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="wrapper">
   <header class="row">
-    <h1 class="columns small-12 medium-6 large-4">Logo</h1>
+    <h1 class="columns small-12 medium-12 large-12">Logo</h1>
 
     <nav>
       <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
@@ -19,7 +19,14 @@
       <a href="about.html" class="columns small-12 medium-2 large-1"> About</a>
     </nav>
   </header>
-
+<div class="row">
+  <figure class="columns small-12">
+<img data-interchange="
+[image/project1/old-sm.jpg, small],
+[image/project1/old-mid.jpg, medium],
+[image/project1/old-lg.jpg, large]">
+</figure>
+</div>
   <footer class="row">
   <h6>copyright2017 all right reserveds</h6>
 
