--- a/young.html
+++ b/young.html
@@ -19,7 +19,7 @@
   <header class="row">
 
     <div class="column large-4 medium-4 nav">
-      <a href="index.html" > Home</a>
+      <a href="pro.html" > Home</a>
   </div>
     <div class="column large-4  medium-4 nav ">
       <a href="pro.html" > Portfolio</a>
@@ -31,21 +31,38 @@
 
 <h1 class="columns small-12 medium-12 large-12"> Welcome to Qingdi's Profile Page </h1>
 <h2 class="columns small-12 medium-12 large-12"> Life is short, feel this colourful world with the soul, grasp this sweet moment with the camera.
-
 </h2>
-<h3>Seeking for a cameraman assistant position. My connect qhu5@horizon.csueastbay.edu</h3>
-
 
 
   </header>
+  <h3>My Artwork Grally</h3>
+<div class="row photo">
+  <figure class="columns small-12">
+<img data-interchange="
+[image/project1/young-sm.jpg, small],
+[image/project1/young-mid.jpg, medium],
+[image/project1/young-lg.jpg, large]">
+</figure>
+</div>
+<div class="row">
+<div class="column large-4 medium-4 tm">
+<a href="index.html"><img src="image/project1/old-tm.jpg" a/></a>
+</div>
+<div class="column large-4  medium-4 tm ">
+  <a href="young.html"><img src="image/project1/young-tm.jpg" a/></a>
+
+</div>
+  <div class="column large-4  medium-4 tm">
+      <a href="kid.html" > <img src="image/project1/kid-tm.jpg" a/></a>
+    </div>
+  </div>
 
 
 
+  <footer>
+      <h6>&copy; 2017 Qingdi Hu Web Design 3870</h6>
+    </footer>
 
-  <footer class="row">
-  <h6>&copy; 2017 Qingdi Hu Web Design 3870</h6>
-
-  </footer>
   </div>
 
 
