--- a/pro.html
+++ b/pro.html
@@ -10,46 +10,93 @@
 </head>
 <body>
 <div class="wrapper">
-<header class="row">
-  <h1>logo</h1>
+  <div class="wrapper">
+  <header class="row">
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="pro.html"> Portfolio</a>
-    <a href="about.html">About</a>
-  </nav>
+    <div class="column large-4 medium-4 nav">
+      <a href="index.html" > Home</a>
+  </div>
+    <div class="column large-4  medium-4 nav ">
+      <a href="pro.html" > Portfolio</a>
+
+    </div>
+      <div class="column large-4  medium-4 nav ">
+          <a href="about.html" > About</a>
+  </div>
+
+
 </header>
-<div class="row small-up-2 medium-up-3 large-up-4">
-  <figure class="column column-block">
-    <img src="http://placekitten.com/g/600/600" class="thumbnail" alt="">
-    <figcaption>project1</figcaption>
-  </figure>
 
-  <div class="column column-block">
-    <img src="http://placekitten.com/g/600/600" class="thumbnail" alt="">
+
+
+<h3>My Artwork Grally</h3>
+
+<div class="row photo">
+  <figure class="columns small-12">
+<img data-interchange="
+[image/project1/old-sm.jpg, small],
+[image/project1/old-mid.jpg, medium],
+[image/project1/old-lg.jpg, large]">
+</figure>
+</div>
+<div class="row">
+<div class="column large-4 medium-4 tm">
+<a href="pro.html"><img src="image/project1/old-tm.jpg" a/></a>
+</div>
+<div class="column large-4  medium-4 tm ">
+  <a href="young.html"><img src="image/project1/young-tm.jpg" a/></a>
+
+</div>
+  <div class="column large-4  medium-4 tm">
+      <a href="kid.html" > <img src="image/project1/kid-tm.jpg" a/></a>
+    </div>
   </div>
-  <div class="column column-block">
-    <img src="http://placekitten.com/g/600/600" class="thumbnail" alt="">
-  </div>
-  <div class="column column-block">
-    <img src="http://placekitten.com/g/600/600" class="thumbnail" alt="">
-  </div>
-  <div class="column column-block">
-    <img src="http://placekitten.com/g/600/600" class="thumbnail" alt="">
-  </div>
-  <div class="column column-block">
-    <img src="http://placekitten.com/g/600/600" class="thumbnail" alt="">
-  </div>
+<h4> My Web Design Work is coming .....</h4>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<footer>
+    <h6>&copy; 2017 Qingdi Hu Web Design 3870</h6>
+  </footer>
+
 </div>
 
-<footer class="row">
-<h6>copyright2017 all right reserveds</h6>
 
-</footer>
-</div>
-
-
-
+<script language="JavaScript">
+    var myDate = new Date();
+    /* hour is before noon */
+    if ( myDate.getHours() < 12 )
+    {
+        document.getElementById('greeting').innerHTML = "Good Morning!";
+    }
+    else  /* Hour is from noon to 5pm (actually to 5:59 pm) */
+    if ( myDate.getHours() >= 12 && myDate.getHours() <= 17 )
+    {
+        document.getElementById('greeting').innerHTML = "Good Afternoon!";
+    }
+    else  /* the hour is after 5pm, so it is between 6pm and midnight */
+    if ( myDate.getHours() > 17 && myDate.getHours() <= 24 )
+    {
+       document.getElementById('greeting').innerHTML = "Good Evening!";
+    }
+    else  /* the hour is not between 0 and 24, so something is wrong */
+    {
+        document.getElementById('greeting').innerHTML = "I'm not sure what time it is!";
+    }
+    /* remove the following in your live script. It is for testing */
+    document.write("<br /><br /> The hour is: ")
+    document.write( myDate.getHours() );
+    </script>
 
 <script src="js/vendor/jquery.js"></script>
 <script src="js/vendor/what-input.js"></script>
