--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div class="wrapper">
   <header class="row">
-
+    <a href="redesign/index.html" >Redesign</a>
     <div class="column large-4 medium-4 nav">
       <a href="index.html" > Home</a>
   </div>
