--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a href="redesign/index.html" >Redesign</a>
     <div class="column large-4 medium-4 nav">
       <a href="index.html" > Home</a>
+      <a href="redesign/index.html" >Redesign</a>
   </div>
     <div class="column large-4  medium-4 nav ">
       <a href="pro.html" > Portfolio</a>
