--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
   <div class="wrapper">
   <header class="row">
-    <a href="redesign/index.html" >Redesign</a>
+
     <div class="column large-4 medium-4 nav">
       <a href="index.html" > Home</a>
-      <a href="redesign/index.html" >Redesign</a>
+
   </div>
     <div class="column large-4  medium-4 nav ">
       <a href="pro.html" > Portfolio</a>
@@ -30,18 +30,44 @@
           <a href="about.html" > About</a>
 </div>
 
-<h1 class="columns small-12 medium-12 large-12"> Welcome to Qingdi's Profile Page </h1>
-<h2 class="columns small-12 medium-12 large-12"> Life is short, feel this colourful world with the soul, grasp this sweet moment with the camera.
-
-</h2>
-<h3>Seeking for a cameraman assistant position. My connect qhu5@horizon.csueastbay.edu</h3>
 
 
 
   </header>
 
 
+  <div class="row">
+<h1 class="columns small-6 medium-6 large-6"> Welcome to Qingdi's Profile Page </h1>
+    <div class="grallery small-6 medium-6 large-6 ">
 
+
+    <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+      <ul class="orbit-container">
+        <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+        <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+        <li class="is-active orbit-slide">
+          <img class="orbit-image" src="image/old.jpg" alt="Space">
+          <figcaption class="orbit-caption">some of my photograph</figcaption>
+        </li>
+        <li class="is-active orbit-slide">
+          <img class="orbit-image" src="image/young.jpg" alt="Space">
+          <figcaption class="orbit-caption">some of my photograph</figcaption>
+        </li>
+        <li class="orbit-slide">
+          <img class="orbit-image" src="image/kid.jpg" alt="Space">
+          <figcaption class="orbit-caption">some of my photograph</figcaption>
+        </li>
+        </ul>
+      <nav class="orbit-bullets">
+        <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
+        <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+        <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+
+      </nav>
+    </div>
+  </div>
+
+  </div>
 
   <footer class="row">
   <h6>&copy; 2017 Qingdi Hu Web Design 3870</h6>
