--- a/pro.html
+++ b/pro.html
@@ -1,106 +1,84 @@
-<!doctype html>
-<html class="no-js" lang="en" dir="ltr">
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Qingdi's - artist -Portfolio</title>
-<link rel="stylesheet" href="css/foundation.css">
-<link rel="stylesheet" href="css/app.css">
-</head>
-<body>
-<div class="wrapper">
-  <div class="wrapper">
-  <header class="row">
+<!DOCTYPE html>
+<html lang="en">
+    <head>
 
-    <div class="column large-4 medium-4 nav">
-      <a href="index.html" > Home</a>
-  </div>
-    <div class="column large-4  medium-4 nav ">
-      <a href="pro.html" > Portfolio</a>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Original Hover Effects with CSS3" />
+        <meta name="keywords" content="css3, transitions, thumbnail, animation, hover, effect, description, caption" />
+        <meta name="author" content="Alessio Atzeni for Codrops" />
+        <link rel="shortcut icon" href="../favicon.ico">
+        <link rel="stylesheet" type="text/css" href="css/demo.css" />
+        <link rel="stylesheet" type="text/css" href="css/style_common.css" />
+        <link rel="stylesheet" type="text/css" href="css/style10.css" />
+        <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css' />
+      <title>Qingdi's - artist -Portfolio</title>
+      <link rel="stylesheet" href="css/foundation.css">
+      <link rel="stylesheet" href="css/app.css">
+    </head>
+    <body>
+      <header class="row">
 
-    </div>
-      <div class="column large-4  medium-4 nav ">
-          <a href="about.html" > About</a>
-  </div>
+        <div class="column large-4 medium-4 nav">
+          <a href="index.html" > Home</a>
+      </div>
+        <div class="column large-4  medium-4 nav ">
+          <a href="pro.html" > Portfolio</a>
+
+        </div>
+          <div class="column large-4  medium-4 nav ">
+              <a href="about.html" > About</a>
+      </div>
 
 
-</header>
+    </header>
 
 
-
-<h3>My Artwork Grally</h3>
-
-<div class="row photo">
-  <figure class="columns small-12">
-<img data-interchange="
-[image/project1/old-sm.jpg, small],
-[image/project1/old-mid.jpg, medium],
-[image/project1/old-lg.jpg, large]">
-</figure>
-</div>
 <div class="row">
-<div class="column large-4 medium-4 tm">
-<a href="pro.html"><img src="image/project1/old-tm.jpg" a/></a>
-</div>
-<div class="column large-4  medium-4 tm ">
-  <a href="young.html"><img src="image/project1/young-tm.jpg" a/></a>
 
-</div>
-  <div class="column large-4  medium-4 tm">
-      <a href="kid.html" > <img src="image/project1/kid-tm.jpg" a/></a>
+
+        <div class="main">
+            <!-- TENTH EXAMPLE -->
+            <div class="view view-tenth column large-6 medium-6 small-6">
+                <img src="image/home.png" />
+                <div class="mask">
+                    <p>It is my protfolio, there are some my web design works and some of my art work</p>
+                    <a href="index.html" class="info">My protfolio</a>
+                </div>
+            </div>
+            <div class="view view-tenth column large-6 medium-6 small-6">
+                <img src="image/re.png" />
+                <div class="mask">
+
+                  <p>I did a redesign for the sushi restaurant, their web site was really simple and bored. We add more funny element in to the page, I did not make it more professional, because the restaurant named Angry fish, I think a cuter web is better for them. </p>
+                      <a href="https://hqd675543171.github.io/art3870-wi17/redesign/" class="info">Redesign</a>
+                </div>
+
+            </div>
+            <div class="view view-tenth column large-6 medium-6 small-6">
+                <img src="image/an.png" />
+                <div class="mask">
+                    <p>I did some animation for the art of noise 1913. There are different animation show how different noise work.</p>
+                    <a href="https://hqd675543171.github.io/art3870-wi17/animation/" class="info">Animation</a>
+                </div>
+            </div>
+            <div class="view view-tenth column large-6 medium-6 small-6">
+                <img src="images/7.jpg" />
+                <div class="mask">
+
+                    <p> My long srcoll page is coming.</p>
+                    <a href="#" class="info">Read More</a>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-<h4> My Web Design Work is coming .....</h4>
 
 
-
-
-
-
-
-
-
-
-
-
-
-<footer>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+    <footer class="row">
     <h6>&copy; 2017 Qingdi Hu Web Design 3870</h6>
-  </footer>
 
-</div>
-
-
-<script language="JavaScript">
-    var myDate = new Date();
-    /* hour is before noon */
-    if ( myDate.getHours() < 12 )
-    {
-        document.getElementById('greeting').innerHTML = "Good Morning!";
-    }
-    else  /* Hour is from noon to 5pm (actually to 5:59 pm) */
-    if ( myDate.getHours() >= 12 && myDate.getHours() <= 17 )
-    {
-        document.getElementById('greeting').innerHTML = "Good Afternoon!";
-    }
-    else  /* the hour is after 5pm, so it is between 6pm and midnight */
-    if ( myDate.getHours() > 17 && myDate.getHours() <= 24 )
-    {
-       document.getElementById('greeting').innerHTML = "Good Evening!";
-    }
-    else  /* the hour is not between 0 and 24, so something is wrong */
-    {
-        document.getElementById('greeting').innerHTML = "I'm not sure what time it is!";
-    }
-    /* remove the following in your live script. It is for testing */
-    document.write("<br /><br /> The hour is: ")
-    document.write( myDate.getHours() );
-    </script>
-
-<script src="js/vendor/jquery.js"></script>
-<script src="js/vendor/what-input.js"></script>
-<script src="js/vendor/foundation.js"></script>
-<script src="js/app.js"></script>
-</body>
+    </footer>
+    </body>
 </html>
