--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       <div class="column large-4  medium-4 nav ">
           <a href="about.html" > About</a>
 </div>
-
+<div class="column large-12  medium-12 nav ">
+    <a href="pre.html" > presention</a>
+</div>
 
 
 
