--- a/qingdi/index.html
+++ b/qingdi/index.html
@@ -25,7 +25,7 @@
 <h2>Qingdi's Homepage</h2>
       <div class="top-bar-right">
         <ul class="menu">
-            <li><a href="Pro.html">Project</a></li>
+            <li><a href="pro.html">Project</a></li>
           <li><a href="about.html">About</a></li>
 
 
