--- a/qingdi/pro.html
+++ b/qingdi/pro.html
@@ -37,7 +37,7 @@
  <h2>Portfolio  </h2>
           <div class="top-bar-right">
             <ul class="menu">
-                <li><a href="Pro.html">Project</a></li>
+                <li><a href="pro.html">Project</a></li>
               <li><a href="about.html">About</a></li>
 
 
