--- a/qingdi/about.html
+++ b/qingdi/about.html
@@ -26,7 +26,7 @@
 <h2></h2>
       <div class="top-bar-right">
         <ul class="menu">
-            <li><a href="Pro.html">Project</a></li>
+            <li><a href="pro.html">Project</a></li>
           <li><a href="about.html">About</a></li>
 
 
