--- a/qingdi/index.html
+++ b/qingdi/index.html
@@ -32,7 +32,7 @@
         <ul class="menu">
             <li><a href="pro.html">Project</a></li>
           <li><a href="about.html">About</a></li>
-<a href="" download="qingdi-resume">Resume</a>
+<a href="image/resume.png"download="image/resume.png">Resume</a>
 
         </ul>
       </div>
