--- a/pro.html
+++ b/pro.html
@@ -4,81 +4,197 @@
 
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <meta name="description" content="Original Hover Effects with CSS3" />
         <meta name="keywords" content="css3, transitions, thumbnail, animation, hover, effect, description, caption" />
         <meta name="author" content="Alessio Atzeni for Codrops" />
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="../favicon.ico">
         <link rel="stylesheet" type="text/css" href="css/demo.css" />
+
         <link rel="stylesheet" type="text/css" href="css/style_common.css" />
         <link rel="stylesheet" type="text/css" href="css/style10.css" />
         <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css' />
+        <link href="https://fonts.googleapis.com/css?family=Audiowide|Josefin+Sans" rel="stylesheet">
       <title>Qingdi's - artist -Portfolio</title>
       <link rel="stylesheet" href="css/foundation.css">
-      <link rel="stylesheet" href="css/app.css">
+
+      <link rel="stylesheet" type="text/css" href="css/app.css" />
+        <link rel="stylesheet" type="text/css" href="css/pro.css" />
+
     </head>
+
     <body>
-      <header class="row">
 
-        <div class="column large-4 medium-4 nav">
-          <a href="index.html" > Home</a>
-      </div>
-        <div class="column large-4  medium-4 nav ">
-          <a href="pro.html" > Portfolio</a>
 
+      <div data-sticky-container>
+      <div data-sticky data-margin-top='0' data-top-anchor="header:bottom" data-btm-anchor="content:bottom">
+        <div class="top-bar topbar-sticky-shrink">
+          <div class="top-bar-title">
+            <li><a href="index.html"> <img src="image/logo.png" alt="" /></a></li>
+          </div>
+ <h2>Portfolio  </h2>
+          <div class="top-bar-right">
+            <ul class="menu">
+                <li><a href="pro.html">Project</a></li>
+              <li><a href="about.html">About</a></li>
+
+
+            </ul>
+          </div>
         </div>
-          <div class="column large-4  medium-4 nav ">
-              <a href="about.html" > About</a>
       </div>
-
-
-    </header>
-
-
-<div class="row">
-
-
-        <div class="main">
-            <!-- TENTH EXAMPLE -->
-            <div class="view view-tenth column large-6 medium-6 small-6">
-                <img src="image/home.png" />
-                <div class="mask">
-                    <p>It is my protfolio, there are some my web design works and some of my art work</p>
-                    <a href="index.html" class="info">My protfolio</a>
-                </div>
-            </div>
-            <div class="view view-tenth column large-6 medium-6 small-6">
-                <img src="image/re.png" />
-                <div class="mask">
-
-                  <p>I did a redesign for the sushi restaurant, their web site was really simple and bored. We add more funny element in to the page, I did not make it more professional, because the restaurant named Angry fish, I think a cuter web is better for them. </p>
-                      <a href="https://hqd675543171.github.io/art3870-wi17/redesign/" class="info">Redesign</a>
-                </div>
-
-            </div>
-            <div class="view view-tenth column large-6 medium-6 small-6">
-                <img src="image/an.png" />
-                <div class="mask">
-                    <p>I did some animation for the art of noise 1913. There are different animation show how different noise work.</p>
-                    <a href="https://hqd675543171.github.io/art3870-wi17/animation/" class="info">Animation</a>
-                </div>
-            </div>
-            <div class="view view-tenth column large-6 medium-6 small-6">
-                <img src="images/7.jpg" />
-                <div class="mask">
-
-                    <p> My long srcoll page is coming.</p>
-                    <a href="#" class="info">Read More</a>
-                </div>
-            </div>
-        </div>
     </div>
 
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-    <footer class="row">
-    <h6>&copy; 2017 Qingdi Hu Web Design 3870</h6>
 
-    </footer>
+
+
+    <h2>PORTFOLIO</h2>
+
+
+    <!-- Portfolio Gallery Grid -->
+    <section class="filter-simple">
+      <div class="button-group round">
+        <button class="button hollow filter-simple-button is-active" data-filter="all">All</button>
+        <button class="button hollow filter-simple-button" data-filter="web">Web</button>
+        <button class="button hollow filter-simple-button" data-filter="photo">Photo</button>
+        <button class="button hollow filter-simple-button" data-filter="ins">illustration</button>
+      </div>
+
+      <div class="row small-up-2 medium-up-4 large-up-4">
+        <div class="column column-block filter-simple-item web view view-tenth">
+          <img src="image/home.png" />
+          <div class="mask">
+              <p>It is my protfolio, there are some my web design works and some of my art work</p>
+              <a href="index.html" class="info">My protfolio</a>
+          </div>
+        </div>
+        <div class="column column-block filter-simple-item web view view-tenth">
+          <img src="image/re.png" />
+          <div class="mask">
+
+            <p>I did a redesign for the sushi restaurant, add more funny element in to the page, I did not make it more professional, because the restaurant named Angry fish. </p>
+                <a href="https://hqd675543171.github.io/art3870-wi17/redesign/" class="info">Redesign</a>
+        </div>
+        </div>
+        <div class="column column-block filter-simple-item web view view-tenth">
+          <img src="image/an.png" />
+          <div class="mask">
+              <p>I did some animation for the art of noise 1913. There are different animation show how different noise work.</p>
+              <a href="https://hqd675543171.github.io/art3870-wi17/animation/" class="info">Animation</a>
+        </div>
+        </div>
+        <div class="column column-block filter-simple-item photo">
+          <img src="image/young.jpg" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item ins">
+          <img src="image/menu.jpg" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item ins">
+          <img src="image/inbox.png" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item web view view-tenth">
+          <img src="image/long.png" />
+          <div class="mask">
+
+              <p> My long srcoll page is coming.</p>
+              <a href="https://hqd675543171.github.io/art3870-wi17/longscroll/" class="info">longscroll</a>
+        </div>
+        </div>
+        <div class="column column-block filter-simple-item photo">
+          <img src="image/design.png" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item ins">
+          <img src="image/robot1.png" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item photo">
+          <img src="image/old.jpg" alt="" />
+        </div>
+
+        </div>
+
+    </section>
+    <section class="filter-simple">
+      <div class="button-group round">
+        <button class="button hollow filter-simple-button is-active" data-filter="all">All</button>
+        <button class="button hollow filter-simple-button" data-filter="space">Space</button>
+        <button class="button hollow filter-simple-button" data-filter="animals">Animals</button>
+        <button class="button hollow filter-simple-button" data-filter="nature">Nature</button>
+      </div>
+
+      <div class="row small-up-2 medium-up-3 large-up-4">
+        <div class="column column-block filter-simple-item space">
+          <img src="image/young.jpg" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item space">
+          <img src="image/menu.jpg" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item space">
+          <img src="image/inbox.png" alt="" />
+        </div>
+
+        <div class="column column-block filter-simple-item animals">
+          <img src="https://placeimg.com/350/350/animals" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item animals">
+          <img src="https://placeimg.com/350/350/animals" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item nature">
+          <img src="https://placeimg.com/350/350/nature" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item nature">
+          <img src="https://placeimg.com/350/350/nature" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item animals">
+          <img src="https://placeimg.com/350/350/animals" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item nature">
+          <img src="https://placeimg.com/350/350/nature" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item animals">
+          <img src="https://placeimg.com/350/350/animals" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item space">
+          <img src="https://spaceholder.cc/350x350" alt="" />
+        </div>
+        <div class="column column-block filter-simple-item space">
+          <img src="https://spaceholder.cc/350x350" alt="" />
+        </div>
+      </div>
+    </section>
+
+
+
+    <!-- END GRID -->
+
+
+
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+
+
     </body>
+    <div class="clearfix"></div>
+<footer>
+    <a href="#" class="button social twitter">
+    <i class="fa fa-twitter" aria-hidden="true"></i> Twitter
+    </a>
+    <a href="#" class="button social linkedin">
+    <i class="fa fa-linkedin" aria-hidden="true"></i> Linkedin
+    </a>
+    <a href="#" class="button social youtube">
+    <i class="fa fa-youtube" aria-hidden="true"></i> Youtube
+    </a>
+    <a href="#" class="button social instagram">
+    <i class="fa fa-instagram" aria-hidden="true"></i> Instagram
+    </a>
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/vendor/what-input.js"></script>
+    <script src="js/vendor/foundation.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/filter-simple.js"></script>
+    </footer>
+
 </html>
